--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 .prev, .next {
     height: 100%;
     width: 80px;
-    background-color: blue;
     float: left;
     display: flex;
     justify-content: center;
@@ -24,7 +23,6 @@
 .images {
     width: calc(100% - 160px);
     height: 100%;
-    background-color: red;
     float: left;
 }
 
@@ -32,4 +30,8 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.prev i, .next i {
+    cursor: pointer;
 }
